// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render Button 1`] = `
<div>
  <button
    class="sc-AxjAm cPIwIA"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> should render a fluid Button 1`] = `
<div>
  <button
    class="sc-AxjAm kmuQsj"
  >
    Button
  </button>
</div>
`;
